--- a/Relatorio_2/LabsisWebPage/modelo/index.html
+++ b/Relatorio_2/LabsisWebPage/modelo/index.html
@@ -30,6 +30,12 @@
 <!-- ***<header>*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<COL WIDTH=10%*>
+	<tr>
+		<TD COLSPAN=7 BGCOLOR="#0099ff" SDVAL="0" SDNUM="2070;1046;@">
+			<br>
+			<br>
+		</TD>
+	</tr>
 	<TR VALIGN=TOP>
 		<TD COLSPAN=1 BGCOLOR="#0099ff" SDVAL="0" SDNUM="2070;1046;@">
 		</TD>
@@ -128,6 +134,12 @@
 			</P>
 		</TD>
 	</TR>
+	<tr>
+		<TD COLSPAN=7 BGCOLOR="#0099ff" SDVAL="0" SDNUM="2070;1046;@">
+			<br>
+			<br>
+		</TD>
+	</tr>
 	<!-- ***MENU LIST*** -->
 	<COL WIDTH=14%*>
 	<TR>
@@ -313,7 +325,7 @@
 		</TD>
 	</TR>
 </TABLE>
-<!-- ***MENU 1*** -->
+<!-- ***Introdução*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<!-- ***Menu 1*** -->
 	<TR VALIGN=TOP>
@@ -357,7 +369,6 @@
 		</TD>
 	</TR>
 </TABLE>
-<!-- ***Introdução*** -->
 <section STYLE="background-color:#eeeeee;">
 	<div><h3>Resumo</h3>
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px; border: none; padding: 0cm">
@@ -491,12 +502,11 @@
 		<br>
 		Quanto a melhorias, isto como é um sistema programado a imaginação é o horizonte pois com facilidade pode-se
 		acrescentar funcionalidades ou alterações para preencher o pretendido e desejado.
-		<br>
-		<br>
 	</P>
+	<br>
 </section>
-<!-- ***Menu 2*** -->
-<TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
+<!-- ***Arquitectura*** -->
+<TABLE STYLE="page-break-before: always;" WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<TR VALIGN=TOP>
 		<TD WIDTH=94%>
 			<UL>
@@ -532,7 +542,6 @@
 		</TD>
 	</TR>
 </TABLE>
-<!-- ***Arquitectura*** -->
 <section STYLE="background-color:#eeeeee;">
 	<div><h3>Tipo de Microcontrolador</h3>
 		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px; border: none; padding: 0cm">
@@ -565,14 +574,12 @@
 	<div><h3>Montagem</h3>
 		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
 			<img src="image/Diagrama_de_Blocos/Diagram.jpg" alt="Image Not Found" width="450">
-			<br>
-			<br>
-			<br>
 		</P>
 	</div>
+	<br>
 </section>
-<!-- ***Menu 3*** -->
-<TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
+<!-- ***Hardware*** -->
+<TABLE STYLE="page-break-before: always;" WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<TR VALIGN=TOP>
 		<TD WIDTH=94%>
 			<UL>
@@ -608,7 +615,6 @@
 		</TD>
 	</TR>
 </TABLE>
-<!-- ***Hardware*** -->
 <section STYLE="background-color:#eeeeee;">
 	<div><h3>Ferramentas</h3>
 		<TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
@@ -642,64 +648,64 @@
 						</div>
 				</td>
 			</tr>
-	</table>
+		</table>
 	</div>
 	<div><h3>Equipamento</h3>
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
-		<div style="vertical-align: top;">
-		<div style="margin-left: 12px; vertical-align: top; display: inline-block; width: 45%;">
-			<ul>
-				<li> ET-BASE AVR ATmega128 <br>
-					&nbsp; &nbsp; &nbsp; Mainboard com MCU Atmega 128 da ETT. <br>
-					<br>
-				</li>
-				<li> LDR - Light Controlled Resistor <br>
-					&nbsp; &nbsp; &nbsp; Dark resistance 1M. <br>
-					&nbsp; &nbsp; &nbsp; 40k at 10 lux. <br>
-					&nbsp; &nbsp; &nbsp; Max voltage 100V. <br>
-					&nbsp; &nbsp; &nbsp; Max power 80mW. <br>
-					<br>
-				</li>
-				<li> INA128PA - Instrumentation Amplifier <br>
-					&nbsp; &nbsp; &nbsp; Banda de transmissão: 1.3MHz <br>
-					&nbsp; &nbsp; &nbsp; Montagem: THT <br>
-					&nbsp; &nbsp; &nbsp; Número de canais: 1 <br>
-					&nbsp; &nbsp; &nbsp; Carcaça: DIP8 <br>
-					&nbsp; &nbsp; &nbsp; Rapidez de subida de tensão: 4V / &mu; s <br>
-					&nbsp; &nbsp; &nbsp; Temperatura de trabalho: -40...85°C <br>
-					&nbsp; &nbsp; &nbsp; Entradas de tensão instável: 0.025mV <br>
-					&nbsp; &nbsp; &nbsp; Tensão de trabalho: 2.25...18V <br>
-					<br>
-				</li>
-				<li> LCD 20x4 Blue NHD-0420DZ-NSW-BBW <br>
-					&nbsp; &nbsp; &nbsp; 4x20 Characters HD44780 compatible
-				</li>
-			</ul>
-		</div>
-		<div style="margin-left: 12px; vertical-align: top; display: inline-block; width: 45%;">
-			<ul>
-				<li> Model Craft RS-2 \- Servo Motor <br>
-					&nbsp; &nbsp; &nbsp; Control System:<br>
-					&nbsp; &nbsp; &nbsp; +Pulse Width Control 1500 &mu; sec <br>
-					&nbsp; &nbsp; &nbsp; Operating Voltage: <br>
-					&nbsp; &nbsp; &nbsp; 4.8-6.0 Volts <br>
-					&nbsp; &nbsp; &nbsp; Operating Speed (4.8V):<br>
-					&nbsp; &nbsp; &nbsp; 0.19sec/60° at no load <br>
-					&nbsp; &nbsp; &nbsp; Stall Torque (4.8V): <br>
-					&nbsp; &nbsp; &nbsp; 42 oz/in (3.0 kg/cm) <br>
-					<br>
-				</li>
-				<li> PCF8563 RTC Board <br>
-					&nbsp; &nbsp; &nbsp; Real-time clock/calendar. <br>
-					&nbsp; &nbsp; &nbsp; Battery on board. <br>
-					&nbsp; &nbsp; &nbsp; I2C communication. <br>
-					<br>
-				</li>
-				<li> KEYPAD4X4W <br>
-					&nbsp; &nbsp; &nbsp; 16 Button Keypad. switch
-				</li>
-			</ul>
-		</div>
+		<div style="vertical-align: top; font-size:11px;">
+			<div style="margin-left: 12px; vertical-align: top; display: inline-block; width: 40%;">
+				<ul>
+					<li> ET-BASE AVR ATmega128 <br>
+						&nbsp; &nbsp; &nbsp; Mainboard com MCU Atmega 128 da ETT. <br>
+						<br>
+					</li>
+					<li> LDR - Light Controlled Resistor <br>
+						&nbsp; &nbsp; &nbsp; Dark resistance 1M. <br>
+						&nbsp; &nbsp; &nbsp; 40k at 10 lux. <br>
+						&nbsp; &nbsp; &nbsp; Max voltage 100V. <br>
+						&nbsp; &nbsp; &nbsp; Max power 80mW. <br>
+						<br>
+					</li>
+					<li> INA128PA - Instrumentation Amplifier <br>
+						&nbsp; &nbsp; &nbsp; Banda de transmissão: 1.3MHz <br>
+						&nbsp; &nbsp; &nbsp; Montagem: THT <br>
+						&nbsp; &nbsp; &nbsp; Número de canais: 1 <br>
+						&nbsp; &nbsp; &nbsp; Carcaça: DIP8 <br>
+						&nbsp; &nbsp; &nbsp; Rapidez de subida de tensão: 4V / &mu; s <br>
+						&nbsp; &nbsp; &nbsp; Temperatura de trabalho: -40...85°C <br>
+						&nbsp; &nbsp; &nbsp; Entradas de tensão instável: 0.025mV <br>
+						&nbsp; &nbsp; &nbsp; Tensão de trabalho: 2.25...18V <br>
+						<br>
+					</li>
+					<li> LCD 20x4 Blue NHD-0420DZ-NSW-BBW <br>
+						&nbsp; &nbsp; &nbsp; 4x20 Characters HD44780 compatible
+					</li>
+				</ul>
+			</div>
+			<div style="margin-left: 12px; vertical-align: top; display: inline-block; width: 35%;">
+				<ul>
+					<li> Model Craft RS-2 \- Servo Motor <br>
+						&nbsp; &nbsp; &nbsp; Control System:<br>
+						&nbsp; &nbsp; &nbsp; +Pulse Width Control 1500 &mu; sec <br>
+						&nbsp; &nbsp; &nbsp; Operating Voltage: <br>
+						&nbsp; &nbsp; &nbsp; 4.8-6.0 Volts <br>
+						&nbsp; &nbsp; &nbsp; Operating Speed (4.8V):<br>
+						&nbsp; &nbsp; &nbsp; 0.19sec/60° at no load <br>
+						&nbsp; &nbsp; &nbsp; Stall Torque (4.8V): <br>
+						&nbsp; &nbsp; &nbsp; 42 oz/in (3.0 kg/cm) <br>
+						<br>
+					</li>
+					<li> PCF8563 RTC Board <br>
+						&nbsp; &nbsp; &nbsp; Real-time clock/calendar. <br>
+						&nbsp; &nbsp; &nbsp; Battery on board. <br>
+						&nbsp; &nbsp; &nbsp; I2C communication. <br>
+						<br>
+					</li>
+					<li> KEYPAD4X4W <br>
+						&nbsp; &nbsp; &nbsp; 16 Button Keypad. switch
+					</li>
+				</ul>
+			</div>
 		</div>
 		<a href="https://www.ptrobotics.com/" target="_blank">
 			<it style="margin-left: 40px; color:green; "> https://www.ptrobotics.com/ </it>
@@ -728,7 +734,6 @@
 			<!--<img src="image/hardware/RS2_1.jpg" alt="Image Not Found" width="200">-->
 			<!--<img src="image/hardware/Power_Supply_1.jpg" alt="Image Not Found" width="200">-->
 		</div>
-	</div>
 	</div>
 	<div><h3>Projecto e Execução da Mainboard</h3>
 		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
@@ -766,9 +771,10 @@
 			<img src="image/board/devboard_1.jpg" alt="Image Not Found" width="650">
 		</div>
 	</div>
+	<br>
 </section>
-  	<!-- ***Menu 4*** -->
-<TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
+<!-- ***Software*** -->
+<TABLE STYLE="page-break-before: always;" WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<TR VALIGN=TOP>
 		<TD WIDTH=94%>
 			<UL>
@@ -804,49 +810,40 @@
 		</TD>
 	</TR>
 </TABLE>
-<!-- ***Software*** -->
 <section STYLE="background-color:#eeeeee;">
-	<div><h3>Programa</h3>
-		<div style="vertical-align: top;">
-			<div style="margin-left: 12px; margin-right: 20px; vertical-align: top; width: 25%; display:inline-block;">
-				<A HREF="https://www.microchip.com/mplab/microchip-studio" target="_blank">
-					<IMG SRC="image/software/Atmel_Studio_7_1.bmp" NAME="Atmel Studio 7" ALIGN=LEFT WIDTH=200 alt="Image Not Found" BORDER=0>
-				</A>
-			</div>
-			&nbsp;
-			&nbsp;
-			<div style="margin-left: 12px; margin-right: 20px; vertical-align: top; width: 60%; display:inline-block;">
-				<pe ALIGN=TOP>
-					O programa utilizado para executar este projecto foi o Atmel Studio 7 (Version: 7.0.2397), 2019 Microship 
-					Technology.
-					<br>
-					<br>
-					Já nos é conhecido que a marca <it><b>Atmel</b><it> foi comprada pela companhia que representa os PICS ou 
-					seja a <it>Microchip</it> sendo que seu <b>IDE</b> também já supporta seus microcontroladores e programadores, 
-					o <b>MPLAB XC</b> é agora uma boa alternativa.
-					<br>
-					<br>
-					<br>
-					<br>
-				</pe>
-			</div>
-		</div>
+	<div ><h3>Programa</h3>
+		<table style="margin-left: 12px;">
+			<tr>
+				<td style="vertical-align: top;" width=30%>
+					<A HREF="https://www.microchip.com/mplab/microchip-studio" target="_blank">
+						<IMG SRC="image/software/Atmel_Studio_7_1.bmp" NAME="Atmel Studio 7" ALIGN=LEFT WIDTH=200 alt="Image Not Found" BORDER=0>
+					</A>
+				</td>
+				<td style="margin-left: 12px;">
+					<pe ALIGN=LEFT>
+						O programa utilizado para executar este projecto foi o Atmel Studio 7 (Version: 7.0.2397), 2019 Microship 
+						Technology.
+						<br>
+						Já nos é conhecido que a marca <it><b>Atmel</b><it> foi comprada pela companhia que representa os PICS ou 
+						seja a <it>Microchip</it> sendo que seu <b>IDE</b> também já supporta seus microcontroladores e programadores, 
+						o <b>MPLAB XC</b> é agora uma boa alternativa.
+					</pe>
+				</td>
+			</tr>
+		</table>
 	</div>
-	<div><h3>Fluxograma</h3>
+	<div ALIGN=TOP ><h3>Fluxograma</h3>
+		<TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 STYLE="page-break-before: always">
+			<TR ALIGN=CENTER>
+				<TD WIDTH=50%>
+					<IMG SRC="image/fluxograma/flowchart_1.gif" NAME="flowchart_1" ALIGN=BOTTOM WIDTH=350 HEIGHT=350 alt="Image Not Found" BORDER=0>
+				</TD>
+				<TD ALIGN=LEFT VALIGN=TOP>
+					<IMG SRC="image/fluxograma/flowchart_2.gif" NAME="flowchart_2" ALIGN=BOTTOM WIDTH=100 alt="Image Not Found" BORDER=0>
+				</TD>
+			</TR>
+		</TABLE>
 		<p ALIGN=LEFT style="margin-left: 12px; margin-right: 20px;">
-			<TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 STYLE="page-break-before: always">
-				<TR>
-					<TD WIDTH=5%>
-					</TD>
-					<TD WIDTH=50%>
-					<IMG SRC="image/fluxograma/flowchart_1.gif" NAME="flowchart_1" ALIGN=BOTTOM WIDTH=400 alt="Image Not Found" BORDER=0>
-					</TD>
-					<TD VALIGN=TOP>
-						<IMG SRC="image/fluxograma/flowchart_2.gif" NAME="flowchart_2" ALIGN=BOTTOM WIDTH=100 alt="Image Not Found" BORDER=0>
-					</TD>
-				</TR>
-			</TABLE>
-			<br>
 			Acima demonstra a metodolgia usada para execução do Programa Principal, 
 			as subrotinas, isto é os <it>programas 1 até 3</it> obedecem a mesma estrutura, 
 			que esta indicado abaixo, em que o bloco READ INPUTS é partilhado com o Programa Principal.
@@ -859,7 +856,7 @@
 			<BR>
 		</p>
 		<p ALIGN=CENTER>
-			<IMG SRC="image/fluxograma/flowchart_general_2.gif" NAME="flowchart_general_2" ALIGN=TOP WIDTH=500 HEIGHT=300 alt="Image Not Found" BORDER=0>
+			<IMG SRC="image/fluxograma/flowchart_general_2.gif" NAME="flowchart_general_2" ALIGN=TOP WIDTH=450 HEIGHT=300 alt="Image Not Found" BORDER=0>
 		</p>
 		<p ALIGN=LEFT style="margin-left: 12px; margin-right: 20px;">
 			<IMG SRC="image/code/code_main_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 alt="Image Not Found" BORDER=0> &nbsp;
@@ -884,23 +881,23 @@
 		<br>
 		<br>
 		<IMG SRC="image/code/code_libraries_1.jpg" NAME="code_libraries_1" ALIGN=CENTER WIDTH=300 alt="Image Not Found" BORDER=0>
-		<br>
-		<br>
 	</P>
+	<br>
 </section>
-<!-- ***Menu 5*** -->
-<TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
+<!-- ***Resultados*** -->
+<TABLE STYLE="page-break-before: always;" WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<TR VALIGN=TOP>
 		<TD WIDTH=94%>
 			<UL>
 				<LI>
-				<P ALIGN=LEFT STYLE="background: #0099ff; border: none; padding: 0cm">
+					<P ALIGN=LEFT STYLE="background: #0099ff; border: none; padding: 0cm">
 				  	<A NAME="Resultados">
 					</A>
 				  	<FONT SIZE=5>
 					  	<b>Resultados</b>
 					</FONT>
-				</P>
+					</P>
+				</LI>
 			</UL>
 		</TD>
 		<TD WIDTH=6%>
@@ -925,7 +922,6 @@
 		</TD>
 	</TR>
 </TABLE>
-<!-- ***Resultados*** -->
 <section STYLE="background-color:#eeeeee;">
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px; border: none; padding: 0cm">
 		videos:
@@ -942,25 +938,23 @@
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
 		Ainda em progresso.
 	</P>
-	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
-		<br>
-		<br>
-	</P>
+	<br>
 </section>
-<!-- ***Menu 6*** -->
+<!-- ***Conclusoes*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 >
 	<TR VALIGN=TOP>
 		<TD WIDTH=94%>
-		<UL>
-			<LI>
-			<P ALIGN=LEFT STYLE="background: #0099ff; border: none; padding: 0cm">
-				<A NAME="Conclus&otilde;es">
-				</A>
-				<FONT SIZE=5>
-					<b>Conclus&otilde;es</b>
-				</FONT>
-			</P>
-		</UL>
+			<UL>
+				<LI>
+					<P ALIGN=LEFT STYLE="background: #0099ff; border: none; padding: 0cm">
+						<A NAME="Conclus&otilde;es">
+						</A>
+						<FONT SIZE=5>
+							<b>Conclus&otilde;es</b>
+						</FONT>
+					</P>
+				</LI>
+			</UL>
 		</TD>
 		<TD WIDTH=6%>
 			<P ALIGN=CENTER STYLE="border: none; padding: 0cm">
@@ -984,7 +978,6 @@
 		</TD>
 	</TR>
 </TABLE>
-<!-- ***Conclusoes*** -->
 <section STYLE="background-color:#eeeeee;">
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px; border: none; padding: 0cm">
 		O sistema de posicionamento fotovoltaico tem diversas soluções de diferentes Empresas que apostam nas energias 
@@ -1016,12 +1009,11 @@
 		<br>
 		Neste projecto não inclui a parte mecânica toda, além da restante instalação do sistema electrico 
 		que um painel fotovoltaico necessita.
-		<br>
-		<br>
 	</P>
+	<br>
 </section>
-<!-- ***Menu TEST*** -->
-<TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 STYLE=" page-break-before: always">
+<!-- ***Test Code*** -->
+<TABLE STYLE="page-break-before: always" WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<TR VALIGN=TOP>
 		<TD WIDTH=94%>
 			<UL>
@@ -1057,7 +1049,6 @@
 		</TD>
 	</TR>
 </TABLE>
-<!-- ***Test Code*** -->
 <section STYLE="background-color:#eeeeee;">
 	<p ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px; font-size: 95%; border: none; padding: 0cm">
 		<a href="Pages/page_1.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 1 </span></a>
@@ -1071,7 +1062,7 @@
 		<a href="Pages/page_9.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 9 </span></a>
 	</p>
 </section>
-<!-- ***Menu 7*** -->
+<!-- ***Referencias*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<TR VALIGN=TOP>
 		<TD WIDTH=94%>
@@ -1108,7 +1099,6 @@
 		</TD>
 	</TR>
 </TABLE>
-<!-- ***Referencias*** -->
 <section STYLE="background-color:#eeeeee;">
 	<h2>LIVROS</h2>
 	<P STYLE="margin-bottom: 0.5cm">
@@ -1389,9 +1379,7 @@
 			</SPAN>
 		</A>
 	</P>
-	<P ALIGN=LEFT STYLE="border: none; padding: 0cm">
-		<BR>
-	</P>
+	<br>
 </section>
 <!-- ***Last blue bar*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
@@ -1421,20 +1409,11 @@
         	</P>
 	    </TD>
     </TR>
-	<!-- ********************************************************************* -->
 </TABLE>
 <HR>
 <footer>
-<P ALIGN=LEFT>
-</P>
-<P ALIGN=LEFT>
-</P>
-<P ALIGN=LEFT>
-</P>
-<P ALIGN=LEFT>
-</P>
-<P ALIGN=CENTER>
-</P>
+	<P ALIGN=LEFT>
+	</P>
 </footer>
 </BODY>
 </HTML>
