--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -1260,6 +1260,91 @@
 			</SPAN>
 		</A>
 	</P>
+	<P STYLE="margin-bottom: 0.5cm">
+		<A NAME="_Ref15">
+		</A>
+		<SPAN LANG="en-US">
+			[15]
+		</SPAN>
+		<SPAN LANG="en-US">
+			ET-Base AVR Easy 32U4, ETT;
+		</SPAN>
+		<A HREF="https://drive.google.com/file/d/1Mp7FE6rTPfbs5WfaucWbOeHBgZC9wCWF/view?usp=sharing" target="_blank">
+			<SPAN STYLE="text-decoration: none">
+				<SPAN LANG="en-US">
+					ET-Base AVR Easy 32U4.
+				</SPAN>
+			</SPAN>
+		</A>
+	</P>
+	<P STYLE="margin-bottom: 0.5cm">
+		<A NAME="_Ref16">
+		</A>
+		<SPAN LANG="en-US">
+			[16]
+		</SPAN>
+		<SPAN LANG="en-US">
+			ET-Base AVR 88, ETT;
+		</SPAN>
+		<A HREF="https://drive.google.com/file/d/1Tz3R4VUVKr3UEqR3smrt4d8FzRtVsdLX/view?usp=sharing" target="_blank">
+			<SPAN STYLE="text-decoration: none">
+				<SPAN LANG="en-US">
+					ET-Base AVR 88.
+				</SPAN>
+			</SPAN>
+		</A>
+	</P>
+	<P STYLE="margin-bottom: 0.5cm">
+		<A NAME="_Ref17">
+		</A>
+		<SPAN LANG="en-US">
+			[17]
+		</SPAN>
+		<SPAN LANG="en-US">
+			ET-Base AVR 128, ETT;
+		</SPAN>
+		<A HREF="https://drive.google.com/file/d/11yEWTIhk65CrZwVUoyw1T-cXBzbfVlI6/view?usp=sharing" target="_blank">
+			<SPAN STYLE="text-decoration: none">
+				<SPAN LANG="en-US">
+					ET-Base AVR 128.
+				</SPAN>
+			</SPAN>
+		</A>
+	</P>
+	<P STYLE="margin-bottom: 0.5cm">
+		<A NAME="_Ref18">
+		</A>
+		<SPAN LANG="en-US">
+			[18]
+		</SPAN>
+		<SPAN LANG="en-US">
+			ET-Base AVR 1280, ETT;
+		</SPAN>
+		<A HREF="https://drive.google.com/file/d/1_dC0RlQPi794K4xQXwdy9P4WrZzkb5Gn/view?usp=sharing" target="_blank">
+			<SPAN STYLE="text-decoration: none">
+				<SPAN LANG="en-US">
+					ET-Base AVR 1280.
+				</SPAN>
+			</SPAN>
+		</A>
+	</P>
+	<P STYLE="margin-bottom: 0.5cm">
+		<A NAME="_Ref19">
+		</A>
+		<SPAN LANG="en-US">
+			[19]
+		</SPAN>
+		<SPAN LANG="en-US">
+			ET-Base PIC 8722, ETT;
+		</SPAN>
+		<A HREF="https://drive.google.com/file/d/1XUkOQTCiF93MhbRMPg5nkXU0FISmf8as/view?usp=sharing" target="_blank">
+			<SPAN STYLE="text-decoration: none">
+				<SPAN LANG="en-US">
+					ET-Base PIC 8722.
+				</SPAN>
+			</SPAN>
+		</A>
+	</P>
 	<h3>WebSites</h3>
 	<P STYLE="margin-bottom: 0.5cm">
 		<A NAME="_Ref10">
