--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -394,11 +394,11 @@
 			<br>
 			<table>
 				<tr>
-					<td ALIGN=LEFT width="40%">
+					<td STYLE="margin-left: 12px;">
 						<img src="./image/Graph/Anualkwh_1.jpg" width="300" alt="Image Not Found">
 						<h4 style="color:blue; margin-left: 2.1cm;">Resposta a inclinação</h4>
 					</td>
-					<td ALIGN=LEFT width="50%">
+					<td STYLE="margin-left: 12px; margin-right: 20px; display: inline-block">
 						<p>
 						Neste gráfico podemos ver um exemplo da diferença entre o rendimento de sistemas sem controlo de orientação, 
 						orientação parcial e total.
@@ -409,7 +409,7 @@
 						<br>
 						<br>
 					</td>
-					<td ALIGN=LEFT width="40%">
+					<td ALIGN=LEFT width="10%">
 					</td>
 				</tr>
 			</table> 
@@ -803,13 +803,13 @@
 	<div ><h3>Programa</h3>
 		<table style="margin-left: 12px;">
 			<tr>
-				<td style="vertical-align: top;" width=30%>
+				<td style="margin-left: 12px;">
 					<A HREF="https://www.microchip.com/mplab/microchip-studio" target="_blank">
-						<IMG SRC="image/software/Atmel_Studio_7_1.bmp" NAME="Atmel Studio 7" ALIGN=LEFT WIDTH=200 alt="Image Not Found" BORDER=0>
+						<IMG SRC="image/software/Atmel_Studio_7_1.bmp" NAME="Atmel Studio 7" ALIGN=LEFT WIDTH=200 alt="Image Not Found" BORDER=1>
 					</A>
 				</td>
-				<td style="margin-left: 12px;">
-					<pe ALIGN=LEFT>
+				<td STYLE="margin-left: 12px; margin-right: 20px; display: inline-block">
+					<pe>
 						O programa utilizado para executar este projecto foi o Atmel Studio 7 (Version: 7.0.2397), 2019 Microship 
 						Technology.
 						<br>
@@ -818,11 +818,13 @@
 						o <b>MPLAB XC</b> é agora uma boa alternativa.
 					</pe>
 				</td>
+				<td ALIGN=LEFT width="10%">
+				</td>
 			</tr>
 		</table>
 	</div>
 	<div ALIGN=TOP ><h3>Fluxograma</h3>
-		<TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 STYLE="page-break-before: always">
+		<TABLE WIDTH=100% BORDER=0 CELLPADDING=1 CELLSPACING=1 >
 			<TR ALIGN=CENTER>
 				<TD WIDTH=50%>
 					<IMG SRC="image/fluxograma/flowchart_1.gif" NAME="flowchart_1" ALIGN=BOTTOM WIDTH=350 HEIGHT=350 alt="Image Not Found" BORDER=0>
@@ -869,7 +871,21 @@
 		Abaixo descrito a lista das libarias usadas no codigo:
 		<br>
 		<br>
-		<IMG SRC="image/code/code_libraries_1.jpg" NAME="code_libraries_1" ALIGN=CENTER WIDTH=300 alt="Image Not Found" BORDER=0>
+		<table>
+			<tr>
+				<td STYLE="margin-left: 12px;">
+					<IMG SRC="image/code/code_libraries_1.jpg" NAME="code_libraries_1" ALIGN=CENTER WIDTH=300 alt="Image Not Found" BORDER=0>
+				</td>
+				<td STYLE="margin-left: 12px; margin-right: 20px; display: inline-block">
+					Para explicar o código na sua totalidade é complicado devido a ser muito, tem comunicação I2C para o RTC, 
+					tem USART para comunicar com o PC, Tem leitura ADC e o Servo Motor, além dos pormenores de funcionalidade de cada componente, 
+					tais como o LCD e KEYPAD, a forma como foi concebido as librarias e o vasto trabalho na sua execução. Dai acho melhor se for 
+					por demonstração.
+				</td>
+				<td ALIGN=LEFT width="10%">
+				</td>
+			</tr>
+		</table>
 	</P>
 	<br>
 </section>
@@ -1487,6 +1503,7 @@
 <HR>
 <footer>
 	<P ALIGN=LEFT>
+	S.S
 	</P>
 </footer>
 </BODY>
