--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -878,9 +878,12 @@
 				</td>
 				<td STYLE="margin-left: 12px; margin-right: 20px; display: inline-block">
 					Para explicar o código na sua totalidade é complicado devido a ser muito, tem comunicação I2C para o RTC, 
-					tem USART para comunicar com o PC, Tem leitura ADC e o Servo Motor, além dos pormenores de funcionalidade de cada componente, 
-					tais como o LCD e KEYPAD, a forma como foi concebido as librarias e o vasto trabalho na sua execução. Dai acho melhor se for 
-					por demonstração.
+					tem USART para comunicar com o PC atravez do chip 
+					<A HREF="https://www.ftdichip.com/" target="_blank">
+						<span> FTDI </span>
+					</A>, tem leitura ADC e o Servo Motor, além dos pormenores de funcionalidade de 
+					cada componente, tais como o LCD e KEYPAD, a forma como foi concebido as librarias e o vasto trabalho na 
+					sua execução. Dai acho melhor se for por demonstração.
 				</td>
 				<td ALIGN=LEFT width="10%">
 				</td>
