--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -757,7 +757,7 @@
 			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 			<img src="image/board/devboard_2.jpg" style="margin-top: 12px;" alt="Image Not Found" width="250" >
 			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-			<img src="image/board/devboard_1.jpg" style="margin-top: 12px;" alt="Image Not Found" width="250" >
+			<img src="image/board/devboard_1.png" style="margin-top: 12px;" alt="Image Not Found" width="250" >
 		</DIV>
 	</DIV>
 	<br>
@@ -936,7 +936,7 @@
 		<br>
 		<div style="margin-left: 12px; margin-right: 20px; vertical-align: top; width: 25%; display:inline-block;">
 			<A HREF="still in progress" target="_blank">
-				<IMG SRC="image/board/devboard_1.jpg" NAME="simulation_1" ALIGN=LEFT WIDTH=200 alt="Image Not Found" BORDER=0>
+				<IMG SRC="image/board/devboard_1.png" NAME="simulation_1" ALIGN=LEFT WIDTH=200 alt="Image Not Found" BORDER=0>
 			</A>
 		</div>
 	</P>
