--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -573,7 +573,7 @@
 	</div>
 	<div><h3>Montagem</h3>
 		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
-			<img src="image/Diagrama_de_Blocos/Diagram.jpg" alt="Image Not Found" width="450">
+			<img src="image/Diagrama_de_Blocos/Diagram.png" alt="Image Not Found" width="450">
 		</P>
 	</div>
 	<br>
