--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -471,7 +471,7 @@
 			<br>
 		</P>
 		<div ALIGN=CENTER STYLE="margin-left: 12px; margin-right: 100px;">
-			<img src="./image/Sensor_Actuator_Principle.jpg" width="300" alt="Image Not Found">
+			<img src="./image/Sensor_Actuator_Principle.png" width="300" alt="Image Not Found">
 			<br>
 			<b>Principio de Funcionamento Sensor</b> <A HREF="#Ref1"><span>[1]</span></A>
 		</div>
