--- a/Relatorio_2/LabsisWebPage/modelo/index.html
+++ b/Relatorio_2/LabsisWebPage/modelo/index.html
@@ -471,7 +471,7 @@
 			<br>
 		</P>
 		<div ALIGN=CENTER STYLE="margin-left: 12px; margin-right: 100px;">
-			<img src="./image/Sensor_Actuator_Principle.jpg" width="300" alt="Image Not Found">
+			<img src="./image/Sensor_Actuator_Principle.png" width="300" alt="Image Not Found">
 			<br>
 			<b>Principio de Funcionamento Sensor</b> <A HREF="#Ref1"><span>[1]</span></A>
 		</div>
@@ -573,7 +573,7 @@
 	</div>
 	<div><h3>Montagem</h3>
 		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
-			<img src="image/Diagrama_de_Blocos/Diagram.jpg" alt="Image Not Found" width="450">
+			<img src="image/Diagrama_de_Blocos/Diagram.png" alt="Image Not Found" width="450">
 		</P>
 	</div>
 	<br>
@@ -757,7 +757,7 @@
 			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 			<img src="image/board/devboard_2.jpg" style="margin-top: 12px;" alt="Image Not Found" width="250" >
 			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-			<img src="image/board/devboard_1.jpg" style="margin-top: 12px;" alt="Image Not Found" width="250" >
+			<img src="image/board/devboard_1.png" style="margin-top: 12px;" alt="Image Not Found" width="250" >
 		</DIV>
 	</DIV>
 	<br>
@@ -936,7 +936,7 @@
 		<br>
 		<div style="margin-left: 12px; margin-right: 20px; vertical-align: top; width: 25%; display:inline-block;">
 			<A HREF="still in progress" target="_blank">
-				<IMG SRC="image/board/devboard_1.jpg" NAME="simulation_1" ALIGN=LEFT WIDTH=200 alt="Image Not Found" BORDER=0>
+				<IMG SRC="image/board/devboard_1.png" NAME="simulation_1" ALIGN=LEFT WIDTH=200 alt="Image Not Found" BORDER=0>
 			</A>
 		</div>
 	</P>
